@@ -1,3 +1,8 @@
+2020-02-06  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/stl_algobase.h (__iter_swap, __iter_swap<true>): Remove
+	redundant _GLIBCXX20_CONSTEXPR.
+
 2020-02-05  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/bits/iterator_concepts.h (iter_reference_t)
